--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "csv-parse": "^5.5.6",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-search-autocomplete": "^8.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
